# hypershunt

./: .containerignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  build.rs  hypershunt.kdl
.github/workflows/: build.yml  release.yml
docs/: README.md  _coverpage.md  _sidebar.md  glossary.md  grammar.md  guide.md  home.md  hypershunt-logo.xcf  hypershunt-title.xcf  hypershunt.1  index.html  manual.md  quickstart.md  recipes.md  reference.md  troubleshooting.md
examples/: h2c_connect_echo.rs  h3get.rs
packaging/: description.txt
packaging/debian/: postinst  prerm
packaging/fail2ban/filter.d/: hypershunt.conf
packaging/fail2ban/jail.d/: hypershunt.conf
packaging/oci/: Containerfile  build.sh  hypershunt-container.kdl
packaging/rpm/: postinst.sh  prerm.sh
packaging/systemd/: hypershunt.service
scripts/: release-notes.sh
src/: access.rs  access_log.rs  auth.rs  bootstrap.rs  cert.rs  compress.rs  dns_provider.rs  error.rs  geoip.rs  headers.rs  inherit.rs  jwt.rs  lb.rs  listener.rs  main.rs  matcher.rs  metrics.rs  oidc.rs  privdrop.rs  proxy_proto.rs  rate_limit.rs  reload.rs  router.rs  security.rs  task.rs  test.rs
src/cache/: entry.rs  key.rs  mod.rs  policy.rs  store.rs
src/cert/: acme.rs  acme_alpn.rs  mtls.rs  ocsp.rs  state.rs  tls.rs
src/config/: kdl.rs  mod.rs  parse.rs  tests.rs  types_auth.rs  types_socket.rs  types_tls.rs
src/config/parse/: auth.rs  handler.rs  matcher.rs  policy.rs  tls.rs
src/config/tests/: auth.rs  policy.rs  tls.rs
src/handler/: auth_request.rs  cgi.rs  cgi_util.rs  fcgi.rs  health.rs  mod.rs  proxy.rs  scgi.rs  static_files.rs  status.rs
src/handler/proxy/: h3.rs  inner.rs  upgrade.rs
src/handler/proxy/upgrade/: ws.rs
src/handler/status/: render_html.rs  render_json.rs
src/listener/: datagram.rs  http.rs  quic.rs  service.rs  socket.rs  stream.rs  tests.rs
src/oidc/: backchannel.rs  bearer.rs  jws.rs  routes.rs
src/reload/: builders.rs  diff.rs  lifecycle.rs
src/router/: tests.rs
tests/integration/: Containerfile  lib.sh  run.sh  smoke.sh  suite_access.sh  suite_access_log.sh  suite_auth.sh  suite_auth_file.sh  suite_auth_request.sh  suite_cache.sh  suite_cgi.sh  suite_gateways.sh  suite_headers.sh  suite_health.sh  suite_http3.sh  suite_jwt.sh  suite_matchers.sh  suite_mtls.sh  suite_proxy.sh  suite_proxy_h3.sh  suite_proxy_lb.sh  suite_proxy_protocol.sh  suite_proxy_trust.sh  suite_rate_limit.sh  suite_reload.sh  suite_respond.sh  suite_rewrite.sh  suite_routing.sh  suite_security.sh  suite_static.sh  suite_static_extras.sh  suite_status.sh  suite_stream.sh  suite_subrequest_auth.sh  suite_tls.sh  suite_try_files.sh  suite_udp.sh  suite_upgrade.sh  suite_websocket.sh
